changed margin top to fix extra space under header and added some code to help custom style the form dropdowns

--- a/app/assets/stylesheets/layout_components/siteheader.scss
+++ b/app/assets/stylesheets/layout_components/siteheader.scss
@@ -80,7 +80,7 @@
 }
 
 .top-nav-offset{
-  margin-top: 33px;
+  margin-top: 19px;
 }
 
 .title-bar{
